--- a/node-and-express/airbnb/package.json
+++ b/node-and-express/airbnb/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.18",
     "body-parser": "^2.2.1",
+    "ejs": "^3.1.10",
     "express": "^5.2.1",
     "nodemon": "^3.1.11",
     "tailwindcss": "^4.1.18"
