--- a/node-express-mongoose/session/package.json
+++ b/node-express-mongoose/session/package.json
@@ -13,8 +13,10 @@
   "type": "commonjs",
   "dependencies": {
     "@tailwindcss/cli": "^4.1.18",
+    "connect-mongodb-session": "^5.0.0",
     "ejs": "^3.1.10",
     "express": "^5.2.1",
+    "express-session": "^1.18.2",
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.4",
     "mysql2": "^3.16.1",
